welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:10: error: ')' expected but 'return' found.
		return true
                ^