welcome.lessons.welcome.bat.bool1.HasTeen.scala.code
def intervalle(n:Int) : Boolean= {
	if (n<= 19 && 13 <= n)
		return true
	else
		return false
}

def hasTeen(a:Int, b:Int, c:Int): Boolean = {
	if(intervalle(a) | intervalle(b) | intervalle(c)
		return true
	else
		return false
}
